Tests: fix wrapper test